--- a/less/ff-overrides.less
+++ b/less/ff-overrides.less
@@ -12,10 +12,22 @@
   }
 }
 
+// Fix taxonomy menu layout
 #block-taxonomy-menu-block-1 {
   ul {
     list-style: none;
     padding: 0;
+  }
+}
+
+//Fix Navigation menu layout
+#block-system-navigation {
+  ul.nav {
+    li {
+      a {
+        padding: 10px 15px 10px 0;
+      }
+    }
   }
 }
 
